# ai-code-orchestrator

./: .cursorrules  .gitignore  AI Code Orchestrator - Technical Documentation.md  Dockerfile  Dockerfile.api  Makefile  README.md  check_health.bat  cli.py  debug_context.py  docker-compose.yml  experience.db  manage.py  pipeline.py  pyproject.toml  rag_audit_list.txt  rag_inventory.txt  regenerate_log.txt  requirements.txt  settings_check.json  start_all.bat  start_backend.bat  test_env.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
api/: admin_routes.py  agent_routes.py  app.py  cli_commands.py  config_routes.py  event_bus.py  form_chat_routes.py  form_routes.py  ide_routes.py  knowledge_routes.py  shared.py  vision_routes.py
config/: .env.example  agent_config.yaml  best_practices.yaml  domain_config.yaml  domain_rules.yaml  limits.yaml  model_mapping.yaml  model_mapping_v2.yaml  rag_hybrid_config.yaml
core/: agent_helper.py  audit_logger.py  benchmark_runner.py  cache_manager.py  cascade_metrics.py  code_evaluator.py  code_executor.py  consensus_engine.py  context_manager.py  context_manager_v2.py  context_manager_v3.py  cost_manager.py  cost_manager_v2.py  domain_config.py  domain_validator.py  error_tracker.py  external_integration.py  fact_checker.py  file_writer.py  guardrails.py  lifecycle_orchestrator.py  llm_client.py  llm_client_v2.py  mcp_server.py  model_cascade_router.py  model_router.py  model_router_v2.py  orchestrator.py  orchestrator_v2.py  output_validator.py  parallel_executor.py  pattern_detector.py  (+15 more)
(+727 files in other folders)
