[project]
name = "ai-code-orchestrator"
version = "0.0.2"
requires-python = ">=3.10"
description = "Scaffold for micro-specialized AI code orchestrator"
authors = [{name="Your Team"}]
dependencies = ["jsonschema>=4.21.1", "PyYAML>=6.0.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0", "mypy>=1.9.0"]

[tool.ruff]
line-length = 100

[project.dependencies]
fastapi>=0.112.0
uvicorn>=0.30.0
