[project]
name = "ai-code-orchestrator"
version = "0.1.0"
requires-python = ">=3.10"
description = "Scaffold for micro-specialized AI code orchestrator"
authors = [{name = "Your Team"}]
dependencies = [
  "jsonschema>=4.21.1",
  "PyYAML>=6.0.1",
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "prometheus_client>=0.20.0",
  "pydantic>=2.8.0",
  "chromadb>=0.4.22",
  "sentence-transformers>=2.3.0",
  "tiktoken>=0.5.2",
  "openai>=1.0.0",
  "anthropic>=0.18.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0","ruff>=0.5.0","mypy>=1.10.0"]

[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"
